@@ -111,7 +111,7 @@ void DebugLogger::EnableStreams(const char* s) {
             exit(0);
         }
 
-        if ( util::starts_with(ltok, "plugin-") ) {
+        if ( std::string_view{ltok}.starts_with("plugin-") ) {
             // Cannot verify this at this time, plugins may not
             // have been loaded.
             enabled_streams.insert(std::move(ltok));
@@ -145,7 +145,7 @@ bool DebugLogger::CheckStreams(const std::set<std::string>& plugin_names) {
         available_plugin_streams.insert(PluginStreamName(p));
 
     for ( const auto& stream : enabled_streams ) {
-        if ( ! util::starts_with(stream, "plugin-") )
+        if ( ! stream.starts_with("plugin-") )
             continue;
 
         if ( available_plugin_streams.count(stream) == 0 ) {
